# HiveBox

./: .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  compose.yaml  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: docker-image.yml  lint-hadolint.yml  lint-pylint.yml  lint-ruff.yml  pytest.yml  scorecard.yml
src/HiveBox/: __init__.py  __version__.py  main.py  test_main.py
src/HiveBox/routers/: temperature.py  version.py
src/hive_box/: __init__.py  main.py  test_main.py
src/hive_box/routers/: temperature.py  version.py
