[project]
name = "HiveBox"
authors = [
  { name="Dvalnir", email="47464326+Dvalnir@users.noreply.github.com" },
]
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "HiveBox.__version__"}