[project]
name = "hive_box"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Dvalnir" }
]
dynamic = ["version"]
dependencies = [
    "aiohttp>=3.11.18",
    "fastapi[standard]>=0.115.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/hive_box/__version__.py"

[dependency-groups]
dev = [
    "commitizen>=4.6.0",
    "pre-commit>=4.2.0",
    "pylint[spelling]>=3.3.6",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
